# ProjectIris

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  gcp-spanner-gettingstarted.md
.github/workflows/: docs-daily-sync.yml  iris-server-ci.yml  iris-server-real-transport-nightly.yml  player-web-ci.yml  repo-gate.yml  transport-core-ci.yml  transport-core-release.yml
apps/: README.md
apps/control-plane/: README.md
apps/player-web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/: README.md
docs/: README.md  contributing.md
docs/architecture/: README.md  adr-0001-runtime-and-deployment.md  greenfield-video-stack-2026.md
docs/platform/: README.md
docs/policy/: README.md  data-governance-baseline.md  licensing-strategy.md
docs/roadmap/: build-in-public.md
docs/runbooks/: README.md  docs-fast-lane-recovery.md  (+2 more)
infra/: README.md
platform/: README.md
scripts/: README.md
services/: README.md
services/transport-core/: .gitignore  Cargo.toml  LICENSE  README.md
services/transport-core/docs/: release-checklist.md
services/transport-core/docs/evidence/: README.md
services/transport-core/scripts/: benchmark.sh  smoke.sh
services/transport-core/src/: lib.rs
services/transport-core/src/framing/: mod.rs
services/transport-core/src/input/: mod.rs
services/transport-core/src/metrics/: mod.rs
services/transport-core/src/profile/: mod.rs
services/transport-core/src/transport/: mod.rs
services/transport-core/tests/: smoke.rs
tests/: README.md
(+45 files in other folders)
